deployment/app-deploy/api/api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: observer
  labels:
    io.kompose.service: api
  name: api
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: api
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
      - name: observer-api
        image: docker-registry.rubyforce.co:5000/observer/observer_api:0.0.1
        name: api
        ports:
          - containerPort: 8080
            hostIP: 127.0.0.1
          - containerPort: 4000
            hostIP: 127.0.0.1
          - containerPort: 4001
            hostIP: 127.0.0.1
          - containerPort: 4002
            hostIP: 127.0.0.1
          - containerPort: 6666
            hostIP: 127.0.0.1
          - containerPort: 6667
            hostIP: 127.0.0.1
          - containerPort: 6668
            hostIP: 127.0.0.1
        resources: {}
        tty: true
      restartPolicy: Always
status: {}
