deployment/app-deploy/api/00-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  namespace: observer
  labels:
    io.kompose.service: api
  name: api
spec:
  type: LoadBalancer
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: "4001"
    port: 4001
    targetPort: 4001
    protocol: TCP
  - name: "6666"
    port: 6666
    targetPort: 6666
    protocol: TCP
  selector:
    io.kompose.service: api
