deployment/app-deploy/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  type: LoadBalancer
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "4001"
    port: 4001
    targetPort: 4001
  - name: "6666"
    port: 6666
    targetPort: 6666
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
