deployment/app-deploy/api/02-api-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: observer
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - observer.rubyforce.co
    secretName: api-tls
  rules:
  - host: observer.rubyforce.co
    http:
      paths:
      - backend:
          serviceName: api
          servicePort: 8080
        path: /
