deployment/app-deploy/api/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: observer
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - observer.rubyforce.co
    secretName: observer-tls
  rules:
  - host: observer.rubyforce.co
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: http
